--- a/Lab13/bio13styles.css
+++ b/Lab13/bio13styles.css
@@ -9,6 +9,20 @@ a:link {
   color: maroon;
 }
 
+.skip-link{
+  position: absolute;
+  left: 0;
+  top: -40px;
+  background: #000;
+  color: #fff;
+  padding: 8px;
+  z-index: 100;
+}
+
+.skip-link:focus {
+  top: 0;
+}
+
 a:visited {
   color: gray;
 }
